<resources>
    <string name="favorite_note_to_see_it_here">Favorite a note to see it here</string>
    <string name="search_favorites">Search favorites</string>
</resources>