<resources>
    <string name="create_first_note">Create your first note</string>
    <string name="cd_open_explore">Explore</string>
</resources>